--- a/meat-app-starter/src/app/order/order.component.html
+++ b/meat-app-starter/src/app/order/order.component.html
@@ -5,9 +5,6 @@
   <section class="content">
     <section class="invoice">
 
-          {{ form.valid }}
-          {{ form.value | json }}
-
           <form #form="ngForm" novalidate>
             <div class="row">
               <div class="col-xs-12">
@@ -37,7 +34,7 @@
 
               <div class="col-sm-3 col-xs-6">
                 <mt-input-container label="Complemento">
-                    <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
+                    <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
                 </mt-input-container>
               </div>
               <!-- /.col -->
@@ -65,7 +62,7 @@
 
                   <div class="form-group">
                      
-                    <mt-radio [options]="paymentOptions" name="paymentOption" ngModel></mt-radio>
+                    <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
                   </div>
 
               </div>
@@ -73,22 +70,8 @@
               <div class="col-sm-6 col-xs-12">
                 <p class="lead">Frete e Total:</p>
 
-                <div class="table-responsive">
-                  <table class="table">
-                    <tbody><tr>
-                      <th style="width:50%">Itens:</th>
-                      <td class="text-right">R$ 20,00</td>
-                    </tr>
-                    <tr>
-                      <th>Frete:</th>
-                      <td class="text-right">R$ 8,00</td>
-                    </tr>
-                    <tr>
-                      <th>Total:</th>
-                      <td class="text-right">R$ 28,00</td>
-                    </tr>
-                  </tbody></table>
-                </div>
+                <mt-delivery-costs [delivery]="delivery" [itensValue]="itensValue()"></mt-delivery-costs>
+                
               </div>
               <!-- /.col -->
             </div>
@@ -97,7 +80,7 @@
 
           <div class="row">
             <div class="col-xs-12">
-              <button class="btn btn-success pull-right" [disabled]="!form.valid"><i class="fa fa-credit-card"></i> Concluir Pedido
+              <button (click)="checkOrder(form.value)" class="btn btn-success pull-right" [disabled]="!form.valid || cartItens().length === 0"><i class="fa fa-credit-card"></i> Concluir Pedido
               </button>
             </div>
           </div>
