--- a/meat-app-starter/src/app/order/order.component.html
+++ b/meat-app-starter/src/app/order/order.component.html
@@ -5,36 +5,63 @@
   <section class="content">
     <section class="invoice">
 
-          <form #form="ngForm" novalidate>
+          <form [formGroup]="orderForm" novalidate>
             <div class="row">
               <div class="col-xs-12">
                 <h2 class="page-header">
                   <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
                 </h2>
               </div>
-            </div>                
+            </div>
+            
+            <div class="row">
+              <div class="col-xs-12">
+                <p class="lead">Seus Dados:</p>
+              </div>
+              <div class="col-sm-6 col-xs-12">
+                <mt-input-container errorMessage="Campo nome é obrigatório e com tamanho minimo de 5 caracteres" 
+                  label="Nome">
+                  <input class="form-control" formControlName="name" 
+                    autocomplete="off" placeholder="Nome" >
+                </mt-input-container>
+              </div>
+              <div class="col-sm-3 col-xs-6">
+                <mt-input-container errorMessage="E-mail é inválido" 
+                  label="E-mail">
+                  <input class="form-control" formControlName="email" 
+                    autocomplete="off" placeholder="E-mail" >
+                </mt-input-container>
+              </div>
+              <div class="col-sm-3 col-xs-6">
+                <mt-input-container errorMessage="E-mail é inválido" 
+                  label="Confirmação e-mail">
+                  <input class="form-control" formControlName="emailConfirmation"
+                    autocomplete="off" placeholder="Confirmação e-mail" >
+                </mt-input-container>
+              </div>
+            </div>
 
-            <div class="row invoice-info">
+            <div class="row">
               <div class="col-xs-12">
                 <p class="lead">Endereço de Entrega:</p>
               </div>
               <div class="col-sm-6 col-xs-12">
                 <mt-input-container errorMessage="Campo endereço é obrigatório e com tamanho minimo de 5 caracteres" label="Endereço">
-                  <input class="form-control" name="address" ngModel required minlength="5" 
+                  <input class="form-control" formControlName="address"
                     autocomplete="off" placeholder="Endereço" >
                 </mt-input-container>
               </div>
 
               <div class="col-sm-3 col-xs-6">
                 <mt-input-container errorMessage="Campo número é obrigatório e informar somente números" label="Número">
-                    <input type="text" class="form-control" required name="number" ngModel 
-                      placeholder="Número" autocomplete="off" pattern="^[0-9]*$">
+                    <input type="text" class="form-control" formControlName="number"
+                      placeholder="Número" autocomplete="off">
                 </mt-input-container>
               </div>
 
               <div class="col-sm-3 col-xs-6">
                 <mt-input-container label="Complemento">
-                    <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
+                    <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento">
                 </mt-input-container>
               </div>
               <!-- /.col -->
@@ -62,7 +89,7 @@
 
                   <div class="form-group">
                      
-                    <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
+                    <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
                   </div>
 
               </div>
@@ -80,7 +107,8 @@
 
           <div class="row">
             <div class="col-xs-12">
-              <button (click)="checkOrder(form.value)" class="btn btn-success pull-right" [disabled]="!form.valid || cartItens().length === 0"><i class="fa fa-credit-card"></i> Concluir Pedido
+              <button (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right" 
+                [disabled]="!orderForm.valid || cartItens().length === 0"><i class="fa fa-credit-card"></i> Concluir Pedido
               </button>
             </div>
           </div>
