Finalizado a implementação de Lazy-Loading nos modulos/serviços compartilhados na aplicação.

--- a/meat-app-starter/src/app/order/order.component.html
+++ b/meat-app-starter/src/app/order/order.component.html
@@ -29,14 +29,14 @@
                 </mt-input-container>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <mt-input-container errorMessage="E-mail é inválido" 
+                <mt-input-container errorMessage="E-mail inválido" 
                   label="E-mail">
                   <input class="form-control" formControlName="email" 
                     autocomplete="off" placeholder="E-mail" >
                 </mt-input-container>
               </div>
               <div class="col-sm-3 col-xs-6">
-                <mt-input-container errorMessage="E-mail é inválido" 
+                <mt-input-container errorMessage="E-mail inválido" 
                   label="Confirmação e-mail">
                   <input class="form-control" formControlName="emailConfirmation"
                     autocomplete="off" placeholder="Confirmação e-mail" >
